[package]
name = "kin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"

[profile.release]
strip = true
lto = true
